# ignite-teleprompter

./: Cargo.toml  README.md  tree
.github/workflows/: build.yaml
assets/: teleprompter.html
src/: gui.rs  macros.rs  main.rs  server.rs  teleprompter.html  web_server.rs  ws_server.rs
web/: teleprompter.html
