[package]
name = "ignite-teleprompter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clipboard = "0.5.0"
crossbeam = "0.8.4"
eframe = "0.27.0"
egui = { version = "0.27.0", features = ["serde"]}
futures-util = "0.3.30"
hyper = "1.2.0"
local-ip-address = "0.6.1"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = { version= "1.37.0", features = ["full"] } 
tokio-stream = "0.1.15"
warp = "0.3.6"
websocket = "0.27.0"
