[package]
name = "ignite-teleprompter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.35"
copypasta = "0.10.1"
eframe = "0.27.0"
egui = { version = "0.27.0", features = ["serde"]}
futures-util = "0.3.30"
getopts = "0.2.21"
# Solves https://github.com/Infinixius/ignite-teleprompter/security/dependabot/19
h2 = "0.3.26"
hyper = "1.2.0"
image = "0.24.2"
local-ip-address = "0.6.1"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = { version= "1.37.0", features = ["full"] } 
tokio-stream = "0.1.15"
warp = "0.3.6"